--- a/project/res/values-pt/strings.xml
+++ b/project/res/values-pt/strings.xml
@@ -161,7 +161,7 @@
     <!-- Short label for "sort by price" button -->
     <string name="price">preço</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">classificação</string>
+    <string name="rating">classif.</string>
     <!-- Short label for "sort by distance" button -->
     <string name="distance">distância</string>
     <!-- Short label for "sort by discounts" button -->
@@ -1193,7 +1193,7 @@
     <!-- Slide to purchase -->
     <string name="slide_to_purchase">Deslize para comprar.</string>
     <!-- Slide-to-book widget prompt for hotels -->
-    <string name="slide_to_book_hotel">deslize para reservar hotel</string>
+    <string name="slide_to_book_hotel">deslize para reservar o hotel</string>
     <!-- Slide-to-book widget prompt for flights -->
     <string name="slide_to_book_flight">deslize para reservar voo</string>
     <!-- Your card will be charged -->
@@ -1250,7 +1250,7 @@
 
     <!-- Cost breakdown dialog -->
     <!-- Cost Summary -->
-    <string name="cost_summary">Resumo dos custos</string>
+    <string name="cost_summary">Resumo do valor</string>
     <!-- Taxes and airline fees -->
     <string name="taxes_and_airline_fees">Impostos e taxas</string>
     <!-- Expedia booking fee -->
@@ -1326,9 +1326,9 @@
 
     <!-- Section edit credit card info -->
     <!-- Credit Card field hint -->
-    <string name="credit_card_hint">Número do cartão de crédito</string>
+    <string name="credit_card_hint">Nº cartão</string>
     <!-- Expiration date label -->
-    <string name="expiration_date">Data de vencimento</string>
+    <string name="expiration_date">Data de validade</string>
     <!-- Set expiration date button -->
     <string name="btn_set">Configurar</string>
     <!-- Describes credit card expiration (e.g. "Expires 01/18") -->
@@ -1346,7 +1346,7 @@
     <!-- Postal Code hint -->
     <string name="address_postal_code_hint">CEP</string>
     <!-- Postal Code hint for the US. Most countries use "Postal Code", but in the US we just want "Zip" -->
-    <string name="address_postal_code_hint_US">CEP</string>
+    <string name="address_postal_code_hint_US">Código de segurança</string>
 
     <!-- Save payment info dialog -->
     <!-- save billing info -->
@@ -1481,17 +1481,17 @@
     <!-- Title for section helping users in various ways after booking (implying these are all the actions that can be taken) -->
     <string name="actions">Ações</string>
     <!-- Button label for sharing your recently booked trip -->
-    <string name="share_trip">Compartilhar via e-mail</string>
+    <string name="share_trip">Compartilhe via e-mail</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
-    <string name="add_to_calendar">Adicionar ao Calendário</string>
+    <string name="add_to_calendar">Adicione ao Calendário</string>
     <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Acompanhar com o FlightTrack</string>
+    <string name="add_to_flighttrack">Acompanhe com o FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
-    <string name="call_expedia_customer_support">Ligar para o Atendimento ao Cliente da Expedia</string>
+    <string name="call_expedia_customer_support">Ligue para o Atendimento ao Cliente da Expedia</string>
     <!-- Button label for VSC support webpage link -->
     <string name="vsc_customer_support">Entre em contato conosco</string>
     <!-- Add Insurance label -->
-    <string name="add_insurance">Adicionar seguro</string>
+    <string name="add_insurance">Adicione seguro</string>
     <!-- Insurance -->
     <string name="insurance">Seguro</string>
 
@@ -1604,7 +1604,7 @@
     <!-- Asks for a security code (CVV code or credit card code) for a card.  %s is the card name, E.g., "Security code for Dan's Platinum VISA" -->
     <string name="security_code_TEMPLATE">Código de segurança do &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
-    <string name="card_ending_TEMPLATE">o cartão termina em %s</string>
+    <string name="card_ending_TEMPLATE">cartão terminando em %s</string>
     <!-- Name for a generic card. $1%s is the name of the card, and $2%s is the last 4 digits; e.g. "VISA ending in 1234" -->
     <string name="x_card_ending_in_y_digits_TEMPLATE">%1$s terminando em %2$s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
@@ -2254,9 +2254,9 @@
     <plurals name="number_of_children">
         <item quantity="zero">%d criança</item>
         <item quantity="one">%d criança</item>
-        <item quantity="two">%d criança</item>
-        <item quantity="many">%d criança</item>
-        <item quantity="other">%d criança</item>
+        <item quantity="two">%d crianças</item>
+        <item quantity="many">%d crianças</item>
+        <item quantity="other">%d crianças</item>
     </plurals>
     <!-- A number of guests. Capitalized -->
     <plurals name="number_of_guests">
